# Speech-to-speech-using-pre-trained-models

./: README.md  inference_api.py  main.py  requirements.txt  setup.cfg  text_to_speech.py
models/: phi_2.py
src/: extract_data.py  inference_api.py  query_pipeline.py  record_query.py  whisper_asr.py
